<resources>
    <string name="app_name">无限急救</string>
    <string name="app_pre_name">院前急救</string>
    <string name="app_in_name">院中急救</string>
    <string name="action_settings">添加</string>
    <string name="title_activity_emr">登记信息</string>
    <string name="a11y_filter_applied" translation_description="Alternative text when an event filter is applies">%1s
		病况
	</string>
    <string name="a11y_filter_not_applied" translation_description="Alternative text when an event filter is not applies">
		%1s 病况
	</string>
    <string name="onboarding_get_started" translation_description="开始咯">开始</string>
    <string name="onboarding_welcome_to_google_i_o" translation_description="The welcome message shown at the onboarding screen of the app.">欢迎来到五线急救
	</string>
    <string name="onboarding_watch_live" translation_description="The explanation title of the feature where user can watch I/O sessions by live stream.">
		提升急诊 效率
	</string>
    <string name="onboarding_join_online" translation_description="The explanation of the feature where user can watch I/O sessions by live stream.">
		加入我们开启，急救物联时代
	</string>
    <string name="onboarding_build_schedule" translation_description="The explanation title of the feature where user can choose which sessions to attend.">
		开始
	</string>
    <string name="onboarding_build_sched_benefits" translation_description="The explanation of the feature where user can choose which sessions to attend.">
		Build your custom I/O experience and reserve seats if you\'re an attendee
	</string>
    <string name="action_edit_base_info">编辑</string>
    <string name="input_type_chars_numbers">1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="input_type_numbers">1234567890</string>
    <string name="input_type_numbers_delow">1234567890.&#060;</string>
    <string name="title_home">院前</string>
    <string name="title_dashboard">工作台</string>
    <string name="title_notifications">消息</string>
    <string name="title_user_info">我的</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_patient_detail">PatientDetailActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">注册</string>
    <!-- Strings related to login -->
    <string name="prompt_email">请输入账号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登 录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_profile">编辑</string>

    <string name="title_activity_calling">CallingActivity</string>
    <string name="dummy_button">确认</string>
    <string name="dummy_content">急救出车提醒</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_in_come">新增病人</string>
    <string name="action_save_base_info">保存</string>
    <string name="action_sure">确定</string>
    <string name="start_car">发车</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="title_activity_patient_emr">PatientEmrActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="action_save_wrisband">绑定</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="ecg_memo_title">判图结果
	</string>
    <string name="ecg_property_title"><font color="red">*</font>诊断提示
	</string>
    <string name="profile_name_title"><font color="red">*</font>患者姓名
	</string>
    <string name="jgdb_blood_time"><font color="red">*</font>抽血时间
	</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">
		com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
	</string>
    <string name="title_profile_attacktime"><font color="red">*</font>发病时间
	</string>
    <string name="string_attack_address"><font color="red">*</font>发病地址
	</string>
    <string name="string_ecg_create_time"><font color="red">*</font>检查:
	</string>
    <string name="string_ecg_d_time"><font color="red">*</font>报告:
	</string>
    <string name="string_ecg_tran_time"><font color="red">*</font>接收时间:
	</string>
    <string name="title_profile_idcard_type"><font color="red">*</font>证件类型
	</string>
    <string name="title_comingby_car"><font color="red">*</font>出车单位
	</string>
    <string name="title_comingby_call_time"><font color="red">*</font>呼救时间
	</string>
    <string name="title_comingby_first_touch"><font color="red">*</font>首次医疗接触时间
	</string>
    <string name="title_comingby_arrived_hospital"><font color="red">*</font>到达本院大门时间
	</string>
    <string name="title_comingby_inhospital_accept"><font color="red">*</font>首诊医师接诊时间
	</string>
    <string name="title_comingby_inhospital_doc"><font color="red">*</font>院内接诊时间
	</string>
    <string name="title_comingby_outhospital_intime"><font color="red">*</font>转出医院入门时间
	</string>
    <string name="title_comingby_outhospital_decice"><font color="red">*</font>决定转院时间
	</string>
    <string name="title_comingby_outhospital_out"><font color="red">*</font>离开转出医院
	</string>
    <string name="title_comingby_changehospital_type"><font color="red">*</font>转院类型
	</string>
    <string name="title_comingby_indepart_touch"><font color="red">*</font>床位医生接触时间
	</string>
    <string name="title_comingby_indepart"><font color="red">*</font>发病科室
	</string>
    <string name="title_ecg_accept120_time"><font color="red">*</font>接收时间
	</string>
    <string name="title_ecg_trans_time"><font color="red">*</font>传输时间
	</string>
    <string name="title_xtdiagnose_noty_time"><font color="red">*</font>通知心内科会诊时间
	</string>
    <string name="title_xtdiagnose_killip"><font color="red">*</font>心功能分级分级
	</string>
    <string name="title_xtdiagnose_nyha"><font color="red">*</font>心脏纽约分级(NYHA)
	</string>
</resources>
