<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_edit_patient_info"
            android:title="@string/title_profile"
            app:showAsAction="always"/>

    <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_dashboard"
            app:showAsAction="always"/>

    <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications"
            app:showAsAction="always"/>

    <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/title_user_info"
            app:showAsAction="always"/>

</menu>
