<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_ambulance"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_main_patients"
            android:title="@string/title_dashboard"/>

<!--    <item-->
<!--            android:drugId="@+drugId/add"-->
<!--            android:icon="@drawable/ic_big_add"-->
<!--            android:actionLayout="@layout/layout_new_title"-->
<!--            android:title=""-->
<!--            app:showAsAction="always"-->

<!--    />-->

    <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_main_message"
            android:title="@string/title_notifications"/>

    <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_main_mine"
            android:title="@string/title_user_info"/>

</menu>
