<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewModel"
                type="com.wxsoft.fcare.ui.login.LoginViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            tools:context=".ui.login.LoginActivity">
        <ProgressBar
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/login_progress"
                android:layout_marginTop="281dp"
                android:elevation="8dp"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:goneUnless="@{viewModel.isLoading}"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    app:goneUnless="@{!(viewModel.isLoading || viewModel.logined) }"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="center_horizontal"
                    android:elevation="5dp"
                    android:background="@drawable/bg_dialog">

                <TextView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="27sp"
                    android:layout_marginTop="26dp"
                    android:layout_marginLeft="24dp"
                    android:text="登录"/>

                <EditText
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:layout_marginTop="210dp"
                        android:layout_marginStart="38dp"
                        android:drawablePadding="15dp"
                        android:layout_marginEnd="38dp"
                        android:text="@={viewModel.name}"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>

                <EditText android:selectAllOnFocus="true"
                          android:id="@+id/password"
                          android:drawablePadding="15dp"
                          app:layout_constraintTop_toTopOf="parent"
                          app:layout_constraintLeft_toLeftOf="parent"
                          android:layout_marginTop="266dp"
                          android:layout_marginStart="38dp"
                          android:layout_marginEnd="38dp"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/prompt_password"
                          android:text="@={viewModel.password}"
                          android:imeActionId="6"
                          android:imeActionLabel="@string/action_sign_in_short"
                          android:imeOptions="actionUnspecified"
                          android:inputType="textPassword"
                          android:maxLines="1"
                          android:singleLine="true"/>

                <Button
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="240dp"
                        android:layout_height="52.5dp"
                        android:layout_marginTop="326dp"
                        android:textColor="@color/white"
                        android:text="@string/action_sign_in"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>